--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.5/pixi.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
   <script src="ant.js"></script>
 </body>
