--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<section id="main" class="container">
-		<div id="title">
+		<div id="title" class="mb-3">
 			<h1>Langton's Ant</h1>
 			<p>
 				A two-dimensional universal Turing machine with a very simple set of rules but complex emergent behavior. 
@@ -19,27 +19,31 @@
 			</p>
 		</div>
 
-		<div id="app">
-			<div class="loading-placeholder text-center mt-5">
-				<p class="m-4">Loading...</p>
-				<img class="loading-icon" src="/assets/loading.gif" alt="">
-			</div>
-		</div>
-
-		<div id="controls" class="mt-3 d-none">
+		<div id="controls" class="mb-3 d-none">
 			<form action="javascript:void(0);">
   				<div class="form-group">
     				<label for="delayRange">Ant Delay</label>
     				<input type="range" class="form-control-range" id="delayRange" min="16" max="1000">
   				</div>
+  				<div class="form-group">
+    				<label for="stepRange">Ant Steps Per Delay</label>
+    				<input type="range" class="form-control-range" id="stepRange" min="1" max="50000">
+  				</div>
   				<button class="btn btn-danger reset">Reset</button>
 			</form>
 		</div>
+
+		<div id="app" class="mb-3">
+			<div class="loading-placeholder text-center mt-5">
+				<p class="m-4">Loading...</p>
+				<img class="loading-icon" src="/assets/loading.gif" alt="">
+			</div>
+		</div>
 	</section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.5/pixi.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pixi-viewport@3.17.0/bundle/pixi-viewport.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
   <script src="ant.js"></script>
 </body>
