--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div id="app" class="mb-3">
 			<div class="loading-placeholder text-center mt-5">
 				<p class="m-4">Loading...</p>
-				<img class="loading-icon" src="/assets/loading.gif" alt="">
+				<img class="loading-icon" src="assets/loading.gif" alt="">
 			</div>
 		</div>
 	</section>
